--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,15 @@
     "type": "magento2-module",
     "version": "2.0.0.0",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0"
+        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "ecocode/magento2-plugin": "dev-master"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@bitbucket.org:ecocode/magento2-plugin.git"
+        }
+    ],
     "autoload": {
         "files": ["registration.php"],
         "psr-4": {
